graphs working, need css work

--- a/FlagpoleWeb/index.html
+++ b/FlagpoleWeb/index.html
@@ -14,7 +14,11 @@
         <h1>PUCKFish Data Monitor </h1>
     </div>
     <div class="graphs">
-        <div class="g1" id="graph1"></div>
+        <div class="gT" id="graphT"></div>
+        <div class="gL" id="graphL"></div>
+        <div class="gS" id="graphS"></div>
+        <div class="gD" id="graphD"></div>
+        <div class="gP" id="graphP"></div>
     </div>
 </body>
 
