--- a/FlagpoleWeb/index.html
+++ b/FlagpoleWeb/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <div class = "title">
+        <img src="logo.jpg" class = "logo" alt="PUCKFish Fathom Fishing">
+    </div>
     <div class="graphs">
         <div class="gA" id="graphA"></div>
         <div class="gO" id="graphO"></div>
